--- a/Vacc_Brands_Reactions.ipynb
+++ b/Vacc_Brands_Reactions.ipynb
@@ -34,14 +34,14 @@
           "height": 983
         },
         "id": "xN9G6h8us6dc",
-        "outputId": "3d2ebc67-65ed-4068-df64-abe4ae850075"
+        "outputId": "4a0cdaf6-9983-475f-98f4-1ff290e06893"
       },
       "source": [
         "import pandas as pd\n",
         "df=pd.read_csv(r\"ProcessedCovidVaccineReact.csv\")\n",
         "df"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +210,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 1
         }
       ]
     },
@@ -221,14 +221,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5xxwiwXUtSH0",
-        "outputId": "acab2ff1-360a-4ea6-885d-4682d2649937"
+        "outputId": "7c4f5a8a-2a2e-46e1-c484-47b8ce9dd05b"
       },
       "source": [
         "df.shape\n",
         "dataset = df.dropna() # drop null values\n",
         "dataset.shape"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -240,7 +240,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
@@ -282,7 +282,7 @@
         "  return reactionVsItsCount\n",
         "                            "
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -292,7 +292,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xsmc3OwstgCU",
-        "outputId": "dd7b0cf3-963b-4d4a-f2f2-5bd1b2666848"
+        "outputId": "31754a18-8266-4b46-a1ca-779bd0d1d596"
       },
       "source": [
         "vaccinesAndItsKeyWords = {\"Covaxin\":['covax','vax','behalf_covax'],\n",
@@ -315,7 +315,7 @@
         "\n",
         "print(brandVsReactions)"
       ],
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,19 +329,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "slmnI6DOt7ej",
-        "outputId": "bbea4c6b-34e4-481d-e795-062e2cf9ba6d",
+        "id": "WcQrb-ojzLc2"
+      },
+      "source": [
+        "df = pd.DataFrame(brandVsReactions, index=['Covaxin', 'Pfizer', 'Moderna','Johnson&Johnson','Covishield'])\n",
+        "df"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "id": "slmnI6DOt7ej",
+        "outputId": "d8a1fe0a-da98-4ae2-9f2b-786f20ad9111"
       },
       "source": [
         "df= pd.DataFrame.from_dict(brandVsReactions)\n",
         "df.fillna(0, inplace=True)\n",
         "df"
       ],
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -456,195 +468,36 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 13
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1XwbOGlAvuFb",
-        "outputId": "d52410d4-1ab0-4cd9-d84d-f96c9f3518c6",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 297
-        }
+        "id": "cJ8a6CHFuzta"
       },
       "source": [
-        "df.transpose()\n",
-        "df"
-      ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Covaxin</th>\n",
-              "      <th>Pfizer</th>\n",
-              "      <th>Moderna</th>\n",
-              "      <th>Johnson&amp;Johnson</th>\n",
-              "      <th>Covishield</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>Fever</th>\n",
-              "      <td>11</td>\n",
-              "      <td>91.0</td>\n",
-              "      <td>74.0</td>\n",
-              "      <td>27.0</td>\n",
-              "      <td>7.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Cold</th>\n",
-              "      <td>25</td>\n",
-              "      <td>75.0</td>\n",
-              "      <td>67.0</td>\n",
-              "      <td>30.0</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Body pains</th>\n",
-              "      <td>6</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>1.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Chills</th>\n",
-              "      <td>5</td>\n",
-              "      <td>51.0</td>\n",
-              "      <td>58.0</td>\n",
-              "      <td>37.0</td>\n",
-              "      <td>1.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Headache</th>\n",
-              "      <td>6</td>\n",
-              "      <td>111.0</td>\n",
-              "      <td>132.0</td>\n",
-              "      <td>41.0</td>\n",
-              "      <td>1.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Sore arm</th>\n",
-              "      <td>12</td>\n",
-              "      <td>216.0</td>\n",
-              "      <td>118.0</td>\n",
-              "      <td>24.0</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Vomiting</th>\n",
-              "      <td>3</td>\n",
-              "      <td>33.0</td>\n",
-              "      <td>21.0</td>\n",
-              "      <td>8.0</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>Cough</th>\n",
-              "      <td>1</td>\n",
-              "      <td>5.0</td>\n",
-              "      <td>1.0</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>0.0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "            Covaxin  Pfizer  Moderna  Johnson&Johnson  Covishield\n",
-              "Fever            11    91.0     74.0             27.0         7.0\n",
-              "Cold             25    75.0     67.0             30.0         0.0\n",
-              "Body pains        6     0.0      0.0              0.0         1.0\n",
-              "Chills            5    51.0     58.0             37.0         1.0\n",
-              "Headache          6   111.0    132.0             41.0         1.0\n",
-              "Sore arm         12   216.0    118.0             24.0         0.0\n",
-              "Vomiting          3    33.0     21.0              8.0         0.0\n",
-              "Cough             1     5.0      1.0              0.0         0.0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 17
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cJ8a6CHFuzta",
-        "outputId": "10557f87-b8ea-4f06-b9ad-55eda4be763f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 630
-        }
-      },
-      "source": [
+        "\n",
+        "from matplotlib import pyplot as plt\n",
+        "\n",
         "plotdata = pd.DataFrame({\n",
-        "    \"Fever\":df['Fever'],\n",
-        "    \"Cold\": df['Cold'],\n",
-        "    \"Body Pains\": df['Body pains'],\n",
-        "    \"Chills\": df['Chilld'],\n",
-        "    \"Headache\": df['Headache'],\n",
-        "    \"Sore arm\": df['Sore arm'],\n",
-        "    \"Vomiting\": df['Vomiting'],\n",
-        "    \"Cough\": df['Cough']\n",
+        "    \"Covaxin\":df['Covaxin'],\n",
+        "    \"Pfizer\": df['Pfizer'],\n",
+        "    \"Moderna\": df['Moderna'],\n",
+        "    \"Johnson&Johnson\": df['Johnson&Johnson'],\n",
+        "    \"Covishield\": df['Covishield']\n",
         "    }, \n",
-        "    index=[\"Covaxin\", \"Pfizer\", \"Moderna\", \"Johnson&Johnson\", \"Covishield\"]\n",
+        "    index=[\"Fever\", \"Cold\", \"Bodypains\", \"Chills\", \"Headache\",\"Sore arm\",\"Vomiting\",\"Cough\"]\n",
         ")\n",
-        "plotdata.plot(kind=\"bar\")\n",
-        "plt.title(\"Mince Pie Consumption Study\")\n",
-        "plt.xlabel(\"Family Member\")\n",
-        "plt.ylabel(\"Pies Consumed\")"
+        "plotdata.transpose().plot(kind=\"bar\")\n",
+        "plt.figure(figsize=(35, 35))\n",
+        "plt.title(\"Vaccine vs Reactions Analysis\")\n",
+        "plt.xlabel(\"Vaccine Brands\")\n",
+        "plt.ylabel(\"Reactions\")"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2897\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2898\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2899\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'Fever'",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-071dcdc92b22>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m plotdata = pd.DataFrame({\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;34m\"Fever\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Fever'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;34m\"Cold\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Cold'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"Body Pains\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Body pains'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;34m\"Chills\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Chilld'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2904\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2905\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2906\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2907\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2908\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2898\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2899\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2900\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2901\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2902\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'Fever'"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
