--- a/Vacc_Brands_Reactions.ipynb
+++ b/Vacc_Brands_Reactions.ipynb
@@ -37,11 +37,12 @@
         "outputId": "892a73f7-8476-44eb-fb01-59612462b26b"
       },
       "source": [
+        "# Importing dataset for analysis\n",
         "import pandas as pd\n",
         "df=pd.read_csv(r\"ProcessedCovidVaccineReact.csv\")\n",
         "df"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,11 +225,12 @@
         "outputId": "eb97224f-9a42-4d57-b2ed-293fce10713c"
       },
       "source": [
+        "# Shaping data and dropping nulls\n",
         "df.shape\n",
-        "dataset = df.dropna() # drop null values\n",
+        "dataset = df.dropna()\n",
         "dataset.shape"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -250,9 +252,8 @@
         "id": "BxY6wxfZtoug"
       },
       "source": [
-        "reactions_keywords= ['fever','chills','headache','neck pain','cold','flu','body pain',\n",
-        "            'body pains','sore arm','arm soreness','arm sore','swollen','injection area',\n",
-        "            'tender arm','cough','coughing','sore throat']\n",
+        "# Manually declaring the reaction key words in a dictionary format by mapping with multiple values for single keys\n",
+        "\n",
         "reactionsAndItsKeywords = {'Fever' : ['fever'],\n",
         "                           'Chills': ['chills'],\n",
         "                           'Headache' : ['headache'],\n",
@@ -263,26 +264,27 @@
         "                           'Cough' : ['cough','coughing','sore throat'],\n",
         "                           'Vomiting' : ['vomiting','throw up', 'nausea']}\n",
         "\n",
-        "# Function to reaction with respect to brands\n",
+        "# Function to check reactions with respect to each brand\n",
         "def getReactions(brand, reactionVsItsCount):\n",
         "  # passing the reaction through tweets to check the respective brand\n",
         "  for tweet in df[\"CleanedTweet\"]:\n",
         "    try:\n",
-        "      if tweet.find(brand) != -1:\n",
-        "        for reaction, keywords in reactionsAndItsKeywords.items():\n",
+        "      if tweet.find(brand) != -1:  # Check if brand exist in tweet\n",
+        "        for reaction, keywords in reactionsAndItsKeywords.items(): # Iterate through each tweet when brand exist to check if any reactions from \n",
+        "                                                                   # From the map exists\n",
         "          for keyword in keywords:\n",
         "            if(keyword in tweet):\n",
-        "              if reaction not in reactionVsItsCount.keys():\n",
+        "              if reaction not in reactionVsItsCount.keys():        # If both brand and reactions exist creating dictionary mapping multiple reactions for each brand\n",
         "                reactionVsItsCount[reaction] = 1\n",
         "              else:\n",
         "                  reactionVsItsCount[reaction] = reactionVsItsCount[reaction]+1\n",
-        "          # reactionVsItsCount[reaction]=count\n",
+        "\n",
         "    except Exception as ex:\n",
         "      pass\n",
         "  return reactionVsItsCount\n",
         "                            "
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,6 +297,7 @@
         "outputId": "df9aa571-717c-4be9-b203-2d33ddf410ef"
       },
       "source": [
+        "# Manually declaring vaccine brands by identifying the existing one from the tweets processed data\n",
         "vaccinesAndItsKeyWords = {\"Covaxin\":['covax','vax','behalf_covax'],\n",
         "                          \"Pfizer\":['pfizercovidvaccine','pfizervaccine','pfizer','modernapfizer'],\n",
         "                          \"Moderna\" : ['moderna','modernavaccine','teammoderna'],\n",
@@ -308,14 +311,14 @@
         "  reactionsVsCount={}\n",
         "  for keyword in keywords:\n",
         "    try:\n",
-        "        reactionsVsCount = getReactions(keyword,reactionsVsCount)\n",
+        "        reactionsVsCount = getReactions(keyword,reactionsVsCount) # Function to check reactions for each barnd passed\n",
         "    except:\n",
         "        print (\"Error while checking brand\")\n",
         "  brandVsReactions[vaccine] = reactionsVsCount\n",
         "\n",
         "print(brandVsReactions)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,9 +335,10 @@
         "id": "WcQrb-ojzLc2"
       },
       "source": [
+        "# Creating a data frame\n",
         "df = pd.DataFrame(brandVsReactions, index=['Covaxin', 'Pfizer', 'Moderna','Johnson&Johnson','Covishield'])"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -348,11 +352,12 @@
         "outputId": "7d6843f8-7fb0-4e9a-f6be-46e8f6dc414a"
       },
       "source": [
+        "# Dropping Nan if exist\n",
         "df= pd.DataFrame.from_dict(brandVsReactions)\n",
         "df.fillna(0, inplace=True)\n",
         "df"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,7 +482,7 @@
         "id": "cJ8a6CHFuzta"
       },
       "source": [
-        "\n",
+        "# Visualising the data set through bar chart\n",
         "from matplotlib import pyplot as plt\n",
         "\n",
         "plotdata = pd.DataFrame({\n",
@@ -494,6 +499,17 @@
         "plt.title(\"Vaccine vs Reactions Analysis\")\n",
         "plt.xlabel(\"Vaccine Brands\")\n",
         "plt.ylabel(\"Reactions\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZVaGXW2k89Xd"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
