--- a/Vacc_Brands_Reactions.ipynb
+++ b/Vacc_Brands_Reactions.ipynb
@@ -31,10 +31,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 983
+          "height": 657
         },
         "id": "xN9G6h8us6dc",
-        "outputId": "854d1c25-d16b-4481-e8fd-af49e2a84163"
+        "outputId": "2546490a-da19-44d4-da95-7a0fd2382fae"
       },
       "source": [
         "# Importing dataset for analysis\n",
@@ -42,7 +42,7 @@
         "df=pd.read_csv(r\"ProcessedCovidVaccineReact.csv\")\n",
         "df"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +211,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 1
+          "execution_count": 5
         }
       ]
     },
@@ -222,7 +222,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5xxwiwXUtSH0",
-        "outputId": "d01d4ebb-b294-4562-af19-64b55b2a35a8"
+        "outputId": "5f12bf40-e609-4b46-f874-31654d711963"
       },
       "source": [
         "# Shaping data and dropping nulls\n",
@@ -230,7 +230,7 @@
         "dataset = df.dropna()\n",
         "dataset.shape"
       ],
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -242,7 +242,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 6
         }
       ]
     },
@@ -284,7 +284,7 @@
         "  return reactionVsItsCount\n",
         "                            "
       ],
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -294,18 +294,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xsmc3OwstgCU",
-        "outputId": "d15f7448-147b-4f47-99f6-ac07e42b37c4"
+        "outputId": "ec721662-5287-494d-8e8d-bd00225b93c1"
       },
       "source": [
         "# Manually declaring vaccine brands by identifying the existing one from the tweets processed data\n",
-        "vaccinesAndItsKeyWords = {\"Covaxin\":['covax','vax','behalf_covax'],\n",
-        "                          \"Pfizer\":['pfizercovidvaccine','pfizervaccine','pfizer','modernapfizer','bioNtech'],\n",
-        "                          \"Moderna\" : ['moderna','modernavaccine','teammoderna'],\n",
-        "                          \"Johnson&Johnson\" : ['borisjohnson','johnson','johnsonandjohnson','johnsonandjohnsonvaccine'],\n",
-        "                          \"Covishield\" :['covishield'],\n",
-        "                          \"Astrazeneca\" : ['astrazeneca','oxford'],\n",
-        "                          \"Janssen\" : ['janssen'],\n",
-        "                          \"Sputnik\" : ['sputnik']\n",
+        "vaccinesAndItsKeyWords = {\"Covaxin\":['covax','vax','behalf_covax','covaxin','covaxsd','covaxinrockstheworld','covaxvaccinations','covaxinreiterated'],\n",
+        "                          \"Pfizer\":['pfizercovidvaccine','pfizervaccine','pfizer','modernapfizer','biotech','pfizerbiotech','pfizerbiontech'],\n",
+        "                          \"Moderna\" : ['moderna','modernavaccine','teammoderna','modernagang','modernas'],\n",
+        "                          \"Johnson&Johnson\" : ['borisjohnson','johnsonandjohnson',\n",
+        "                                               'johnsonandjohnsonvaccine','johnsonjohnson',\n",
+        "                                               'johnsonampjohnson','johnsonjohnsonvax','johnsonand','johnson'],\n",
+        "                          \"Covishield\" :['covishield','covishieldvaccine','covishielded'],\n",
+        "                          \"Astrazeneca\" : ['astrazeneca','oxford','breakingastrazeneca','oxfordastrazeneca','astrazenecas',\n",
+        "                                            'astrazenecavaccine','astrazenecaoxford','astrazenecauk'],\n",
+        "                          \"Janssen\" : ['janssenglobal','janssenvaccine','janssen','janssenus'],\n",
+        "                          \"Sputnik\" : ['sputnikint','sputnik','sputnikvaccine','sputnikv','sputnikvaccineke',\n",
+        "                                        'sputnikvaccineinkenya','sputnikvaccinekenya']\n",
         "                          }               \n",
         "\n",
         "reactions=[]\n",
@@ -322,12 +326,12 @@
         "\n",
         "print(brandVsReactions)"
       ],
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{'Covaxin': {'Fever': 11, 'Cold': 25, 'Body pains': 6, 'Chills': 5, 'Headache': 6, 'Sore arm': 12, 'Vomiting': 3, 'Cough': 1}, 'Pfizer': {'Sore arm': 216, 'Cold': 75, 'Headache': 111, 'Fever': 91, 'Chills': 51, 'Vomiting': 33, 'Cough': 5}, 'Moderna': {'Cold': 67, 'Vomiting': 21, 'Fever': 74, 'Chills': 58, 'Sore arm': 118, 'Headache': 132, 'Cough': 1}, 'Johnson&Johnson': {'Cold': 30, 'Headache': 41, 'Chills': 37, 'Sore arm': 24, 'Fever': 27, 'Vomiting': 8}, 'Covishield': {'Fever': 7, 'Chills': 1, 'Headache': 1, 'Body pains': 1}, 'Astrazeneca': {'Fever': 55, 'Chills': 28, 'Headache': 92, 'Cold': 69, 'Vomiting': 13, 'Cough': 6, 'Sore arm': 49, 'Body pains': 14}, 'Janssen': {'Fever': 1, 'Chills': 2, 'Headache': 1}, 'Sputnik': {'Cold': 3, 'Sore arm': 2}}\n"
+            "{'Covaxin': {'Fever': 12, 'Cold': 28, 'Body pains': 7, 'Chills': 5, 'Headache': 6, 'Sore arm': 12, 'Vomiting': 3, 'Cough': 1}, 'Pfizer': {'Sore arm': 219, 'Cold': 79, 'Headache': 112, 'Fever': 95, 'Chills': 51, 'Vomiting': 33, 'Cough': 5}, 'Moderna': {'Cold': 68, 'Vomiting': 21, 'Fever': 76, 'Chills': 59, 'Sore arm': 119, 'Headache': 134, 'Cough': 1}, 'Johnson&Johnson': {'Cold': 40, 'Headache': 53, 'Chills': 50, 'Sore arm': 35, 'Vomiting': 11, 'Fever': 36}, 'Covishield': {'Fever': 10, 'Chills': 1, 'Headache': 1, 'Body pains': 1}, 'Astrazeneca': {'Fever': 59, 'Chills': 31, 'Headache': 111, 'Cold': 84, 'Vomiting': 16, 'Cough': 7, 'Sore arm': 61, 'Body pains': 16}, 'Janssen': {'Fever': 1, 'Chills': 2, 'Headache': 1}, 'Sputnik': {'Cold': 5, 'Sore arm': 6}}\n"
           ],
           "name": "stdout"
         }
@@ -342,7 +346,7 @@
         "# Creating a data frame\n",
         "df = pd.DataFrame(brandVsReactions, index=['Covaxin', 'Pfizer', 'Moderna','Johnson&Johnson','Covishield','Astrazeneca','Janssen','Sputnik'])"
       ],
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -350,10 +354,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 334
+          "height": 297
         },
         "id": "slmnI6DOt7ej",
-        "outputId": "0b7f9732-ce56-4ca5-b5e9-f22e6b16c973"
+        "outputId": "e52bd4ec-bff3-47b2-dd5e-366b41c9f652"
       },
       "source": [
         "# Dropping Nan if exist\n",
@@ -361,7 +365,7 @@
         "df.fillna(0, inplace=True)\n",
         "df"
       ],
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,34 +402,34 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>Fever</th>\n",
-              "      <td>11</td>\n",
-              "      <td>91.0</td>\n",
-              "      <td>74.0</td>\n",
-              "      <td>27.0</td>\n",
-              "      <td>7.0</td>\n",
-              "      <td>55</td>\n",
+              "      <td>12</td>\n",
+              "      <td>95.0</td>\n",
+              "      <td>76.0</td>\n",
+              "      <td>36.0</td>\n",
+              "      <td>10.0</td>\n",
+              "      <td>59</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Cold</th>\n",
-              "      <td>25</td>\n",
-              "      <td>75.0</td>\n",
-              "      <td>67.0</td>\n",
-              "      <td>30.0</td>\n",
+              "      <td>28</td>\n",
+              "      <td>79.0</td>\n",
+              "      <td>68.0</td>\n",
+              "      <td>40.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>69</td>\n",
+              "      <td>84</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>3.0</td>\n",
+              "      <td>5.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Body pains</th>\n",
-              "      <td>6</td>\n",
+              "      <td>7</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
-              "      <td>14</td>\n",
+              "      <td>16</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
@@ -433,43 +437,43 @@
               "      <th>Chills</th>\n",
               "      <td>5</td>\n",
               "      <td>51.0</td>\n",
-              "      <td>58.0</td>\n",
-              "      <td>37.0</td>\n",
+              "      <td>59.0</td>\n",
+              "      <td>50.0</td>\n",
               "      <td>1.0</td>\n",
-              "      <td>28</td>\n",
+              "      <td>31</td>\n",
               "      <td>2.0</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Headache</th>\n",
               "      <td>6</td>\n",
-              "      <td>111.0</td>\n",
-              "      <td>132.0</td>\n",
-              "      <td>41.0</td>\n",
+              "      <td>112.0</td>\n",
+              "      <td>134.0</td>\n",
+              "      <td>53.0</td>\n",
               "      <td>1.0</td>\n",
-              "      <td>92</td>\n",
+              "      <td>111</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Sore arm</th>\n",
               "      <td>12</td>\n",
-              "      <td>216.0</td>\n",
-              "      <td>118.0</td>\n",
-              "      <td>24.0</td>\n",
+              "      <td>219.0</td>\n",
+              "      <td>119.0</td>\n",
+              "      <td>35.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>49</td>\n",
+              "      <td>61</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>2.0</td>\n",
+              "      <td>6.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>Vomiting</th>\n",
               "      <td>3</td>\n",
               "      <td>33.0</td>\n",
               "      <td>21.0</td>\n",
-              "      <td>8.0</td>\n",
+              "      <td>11.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>13</td>\n",
+              "      <td>16</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
@@ -480,7 +484,7 @@
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>6</td>\n",
+              "      <td>7</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "    </tr>\n",
@@ -490,14 +494,14 @@
             ],
             "text/plain": [
               "            Covaxin  Pfizer  Moderna  ...  Astrazeneca  Janssen  Sputnik\n",
-              "Fever            11    91.0     74.0  ...           55      1.0      0.0\n",
-              "Cold             25    75.0     67.0  ...           69      0.0      3.0\n",
-              "Body pains        6     0.0      0.0  ...           14      0.0      0.0\n",
-              "Chills            5    51.0     58.0  ...           28      2.0      0.0\n",
-              "Headache          6   111.0    132.0  ...           92      1.0      0.0\n",
-              "Sore arm         12   216.0    118.0  ...           49      0.0      2.0\n",
-              "Vomiting          3    33.0     21.0  ...           13      0.0      0.0\n",
-              "Cough             1     5.0      1.0  ...            6      0.0      0.0\n",
+              "Fever            12    95.0     76.0  ...           59      1.0      0.0\n",
+              "Cold             28    79.0     68.0  ...           84      0.0      5.0\n",
+              "Body pains        7     0.0      0.0  ...           16      0.0      0.0\n",
+              "Chills            5    51.0     59.0  ...           31      2.0      0.0\n",
+              "Headache          6   112.0    134.0  ...          111      1.0      0.0\n",
+              "Sore arm         12   219.0    119.0  ...           61      0.0      6.0\n",
+              "Vomiting          3    33.0     21.0  ...           16      0.0      0.0\n",
+              "Cough             1     5.0      1.0  ...            7      0.0      0.0\n",
               "\n",
               "[8 rows x 8 columns]"
             ]
@@ -505,7 +509,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 10
         }
       ]
     },
