--- a/Vacc_Brands_Reactions.ipynb
+++ b/Vacc_Brands_Reactions.ipynb
@@ -31,10 +31,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 657
+          "height": 983
         },
         "id": "xN9G6h8us6dc",
-        "outputId": "2546490a-da19-44d4-da95-7a0fd2382fae"
+        "outputId": "cb6df689-c323-40a6-ab68-1af37370d1b6"
       },
       "source": [
         "# Importing dataset for analysis\n",
@@ -42,7 +42,7 @@
         "df=pd.read_csv(r\"ProcessedCovidVaccineReact.csv\")\n",
         "df"
       ],
-      "execution_count": 5,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -78,53 +78,53 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>2021-04-02 23:59:56</td>\n",
-              "      <td>RT @ichaydon: A year ago I tried the Moderna v...</td>\n",
-              "      <td>rt ichaydon year ago tried moderna vaccine see...</td>\n",
-              "      <td>realbafomet</td>\n",
-              "      <td>United Arab Emirates</td>\n",
-              "      <td>['COVIDvaccine']</td>\n",
-              "      <td>United Arab Emirates</td>\n",
+              "      <td>2021-03-17 23:59:34</td>\n",
+              "      <td>The only way #COVID19 can mutate with variants...</td>\n",
+              "      <td>way mutate variants virus replicate hosts peop...</td>\n",
+              "      <td>kemsunde</td>\n",
+              "      <td>Unknown</td>\n",
+              "      <td>['COVID19', 'CovidVaccine', 'GetTheFactsGetThe...</td>\n",
+              "      <td>Unknown</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>2021-04-02 23:59:53</td>\n",
-              "      <td>RT @hotvickkrishna: Why we need Two Doses of m...</td>\n",
-              "      <td>rt hotvickkrishna need two doses mrna vaccine ...</td>\n",
-              "      <td>EVANtiel</td>\n",
-              "      <td>Unknown</td>\n",
-              "      <td>['vaccines', 'COVID19', 'Pfizer', 'moderna', '...</td>\n",
+              "      <td>2021-03-17 23:59:20</td>\n",
+              "      <td>I've now officially had my 1st dose of the #Co...</td>\n",
+              "      <td>ive officially dose covidvaccine definitely wo...</td>\n",
+              "      <td>ManeckiN</td>\n",
+              "      <td>The Wild Western Wastes</td>\n",
+              "      <td>['CovidVaccine', 'COVID19', 'PfizerVaccine', '...</td>\n",
               "      <td>Unknown</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>2021-04-02 23:59:46</td>\n",
-              "      <td>RT @StephMillerShow: Stick it in! Moderna Mama...</td>\n",
-              "      <td>rt stephmillershow stick moderna mama house ya...</td>\n",
-              "      <td>anessia40</td>\n",
-              "      <td>Unknown</td>\n",
-              "      <td>['vaccinated', 'VaccinesWork', 'VaccinesSaveLi...</td>\n",
-              "      <td>Unknown</td>\n",
+              "      <td>2021-03-17 23:58:31</td>\n",
+              "      <td>@hendopolis Imagine if the #Brexit referendum ...</td>\n",
+              "      <td>hendopolis imagine brexit referendum held secr...</td>\n",
+              "      <td>raymasseytweets</td>\n",
+              "      <td>England</td>\n",
+              "      <td>['Brexit', 'EU', 'TrueColours', 'Impfstoff', '...</td>\n",
+              "      <td>United Kingdom</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>2021-04-02 23:59:43</td>\n",
-              "      <td>RT @hotvickkrishna: Why we need Two Doses of m...</td>\n",
-              "      <td>rt hotvickkrishna need two doses mrna vaccine ...</td>\n",
-              "      <td>tammeeh</td>\n",
-              "      <td>Kota Petir</td>\n",
-              "      <td>['vaccines', 'COVID19', 'Pfizer', 'moderna', '...</td>\n",
-              "      <td>Indonesia</td>\n",
+              "      <td>2021-03-17 23:58:03</td>\n",
+              "      <td>@EICostheta @RicBarraArch1 @insiders Yep. The ...</td>\n",
+              "      <td>eicostheta insiders yep liarsnparasites narrow...</td>\n",
+              "      <td>MikeFitzAU</td>\n",
+              "      <td>Mudjimba</td>\n",
+              "      <td>['LiarsNParasites', 'CovidVaccine']</td>\n",
+              "      <td>Australia</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>2021-04-02 23:59:43</td>\n",
-              "      <td>RT @ichaydon: A year ago I tried the Moderna v...</td>\n",
-              "      <td>rt ichaydon year ago tried moderna vaccine see...</td>\n",
-              "      <td>shipshape555</td>\n",
-              "      <td>San Diego</td>\n",
-              "      <td>['COVIDvaccine']</td>\n",
-              "      <td>United States</td>\n",
+              "      <td>2021-03-17 23:57:37</td>\n",
+              "      <td>This sounds like an important topic for @NickS...</td>\n",
+              "      <td>sounds like important topic nicksawyermd tnich...</td>\n",
+              "      <td>stephjantzen</td>\n",
+              "      <td>Greater Sacramento</td>\n",
+              "      <td>['FiresideChat', 'CovidVaccine']</td>\n",
+              "      <td>Brazil</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
@@ -137,81 +137,81 @@
               "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>206245</th>\n",
-              "      <td>2021-03-10 22:35:54</td>\n",
-              "      <td>I blasted this in the car as an Army nurse gav...</td>\n",
-              "      <td>blasted car army nurse gave covid vaccine toda...</td>\n",
-              "      <td>MatthewDWhite2</td>\n",
-              "      <td>New Orleans</td>\n",
-              "      <td>['vaccinated', 'vaccine', 'rona', 'Mississippi...</td>\n",
+              "      <th>352017</th>\n",
+              "      <td>2021-04-03 18:39:22</td>\n",
+              "      <td>RT @citymississauga: #COVID19Vaccine Booking T...</td>\n",
+              "      <td>rt citymississauga booking tip wondering frien...</td>\n",
+              "      <td>AnwarKnight</td>\n",
+              "      <td>Toronto</td>\n",
+              "      <td>['COVID19Vaccine']</td>\n",
+              "      <td>Canada</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>352018</th>\n",
+              "      <td>2021-04-03 18:39:13</td>\n",
+              "      <td>RT @iamwandasykes: We’re fully vaccinated and ...</td>\n",
+              "      <td>rt iamwandasykes fully vaccinated rejuvenated ...</td>\n",
+              "      <td>HarrisTryonLab</td>\n",
+              "      <td>Dallas</td>\n",
+              "      <td>[]</td>\n",
               "      <td>United States</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>206246</th>\n",
-              "      <td>2021-03-10 22:35:48</td>\n",
-              "      <td>2nd #Pfizer shot!! I’m vaccinated! Thank you @...</td>\n",
-              "      <td>pfizer shot im vaccinated thank vanyharbor gre...</td>\n",
-              "      <td>NYMetroVets</td>\n",
-              "      <td>Bronx</td>\n",
-              "      <td>['Pfizer', 'Veterans', 'CovidVaccine']</td>\n",
-              "      <td>United States</td>\n",
+              "      <th>352019</th>\n",
+              "      <td>2021-04-03 18:39:04</td>\n",
+              "      <td>#CovidVaccine and Weird Thoughts by Diane Burt...</td>\n",
+              "      <td>covidvaccine weird thoughts diane burton https...</td>\n",
+              "      <td>dla1950</td>\n",
+              "      <td>http://</td>\n",
+              "      <td>['CovidVaccine']</td>\n",
+              "      <td>Japan</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>206247</th>\n",
-              "      <td>2021-03-10 22:35:09</td>\n",
-              "      <td>@Sarahluvshkey77 Tomorrow is two weeks since m...</td>\n",
-              "      <td>tomorrow two weeks since second shot appointme...</td>\n",
-              "      <td>G8rgrrlCheryl</td>\n",
-              "      <td>Western Washington</td>\n",
-              "      <td>['vaccinated']</td>\n",
-              "      <td>United States</td>\n",
+              "      <th>352020</th>\n",
+              "      <td>2021-04-03 18:38:54</td>\n",
+              "      <td>RT @ProfPatOConnor: It’s nice to know that the...</td>\n",
+              "      <td>rt profpatoconnor nice know ambitions ceo hse ...</td>\n",
+              "      <td>Pepeb72</td>\n",
+              "      <td>Cork</td>\n",
+              "      <td>[]</td>\n",
+              "      <td>Ireland</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>206248</th>\n",
-              "      <td>2021-03-10 22:35:00</td>\n",
-              "      <td>#COVID19 vaccines are hard to come by, but the...</td>\n",
-              "      <td>vaccines hard come theres new way find shot ch...</td>\n",
-              "      <td>medicaldaily</td>\n",
-              "      <td>New York</td>\n",
-              "      <td>['COVID19', 'COVID19vaccine', 'vaccineregistra...</td>\n",
-              "      <td>United States</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>206249</th>\n",
-              "      <td>2021-03-10 22:34:59</td>\n",
-              "      <td>Fully vaccinated ✅ #vaccinated #COVID19 #vacci...</td>\n",
-              "      <td>fully vaccinated vaccinated vaccine getvaccina...</td>\n",
-              "      <td>sister_sweeney</td>\n",
-              "      <td>London</td>\n",
-              "      <td>['vaccinated', 'COVID19', 'vaccine', 'GetVacci...</td>\n",
-              "      <td>United Kingdom</td>\n",
+              "      <th>352021</th>\n",
+              "      <td>2021-04-03 18:38:54</td>\n",
+              "      <td>Finally got #Vaccinated today as per the advic...</td>\n",
+              "      <td>finally got vaccinated today per advice govern...</td>\n",
+              "      <td>DhawalMehta5</td>\n",
+              "      <td>Jaipur</td>\n",
+              "      <td>['Vaccinated', 'Vaccinations']</td>\n",
+              "      <td>India</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>206250 rows × 7 columns</p>\n",
+              "<p>352022 rows × 7 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "                  TweetDate  ...               Country\n",
-              "0       2021-04-02 23:59:56  ...  United Arab Emirates\n",
-              "1       2021-04-02 23:59:53  ...               Unknown\n",
-              "2       2021-04-02 23:59:46  ...               Unknown\n",
-              "3       2021-04-02 23:59:43  ...             Indonesia\n",
-              "4       2021-04-02 23:59:43  ...         United States\n",
-              "...                     ...  ...                   ...\n",
-              "206245  2021-03-10 22:35:54  ...         United States\n",
-              "206246  2021-03-10 22:35:48  ...         United States\n",
-              "206247  2021-03-10 22:35:09  ...         United States\n",
-              "206248  2021-03-10 22:35:00  ...         United States\n",
-              "206249  2021-03-10 22:34:59  ...        United Kingdom\n",
+              "                  TweetDate  ...         Country\n",
+              "0       2021-03-17 23:59:34  ...         Unknown\n",
+              "1       2021-03-17 23:59:20  ...         Unknown\n",
+              "2       2021-03-17 23:58:31  ...  United Kingdom\n",
+              "3       2021-03-17 23:58:03  ...       Australia\n",
+              "4       2021-03-17 23:57:37  ...          Brazil\n",
+              "...                     ...  ...             ...\n",
+              "352017  2021-04-03 18:39:22  ...          Canada\n",
+              "352018  2021-04-03 18:39:13  ...   United States\n",
+              "352019  2021-04-03 18:39:04  ...           Japan\n",
+              "352020  2021-04-03 18:38:54  ...         Ireland\n",
+              "352021  2021-04-03 18:38:54  ...           India\n",
               "\n",
-              "[206250 rows x 7 columns]"
+              "[352022 rows x 7 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 1
         }
       ]
     },
@@ -222,7 +222,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5xxwiwXUtSH0",
-        "outputId": "5f12bf40-e609-4b46-f874-31654d711963"
+        "outputId": "9e9c28cf-d876-441e-f9a2-fefb99cd6c76"
       },
       "source": [
         "# Shaping data and dropping nulls\n",
@@ -230,19 +230,19 @@
         "dataset = df.dropna()\n",
         "dataset.shape"
       ],
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(205574, 7)"
+              "(352010, 7)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 2
         }
       ]
     },
@@ -284,7 +284,7 @@
         "  return reactionVsItsCount\n",
         "                            "
       ],
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -294,7 +294,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xsmc3OwstgCU",
-        "outputId": "ec721662-5287-494d-8e8d-bd00225b93c1"
+        "outputId": "f0a83417-b2ba-4033-9f2b-6dccf706e496"
       },
       "source": [
         "# Manually declaring vaccine brands by identifying the existing one from the tweets processed data\n",
@@ -326,12 +326,12 @@
         "\n",
         "print(brandVsReactions)"
       ],
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{'Covaxin': {'Fever': 12, 'Cold': 28, 'Body pains': 7, 'Chills': 5, 'Headache': 6, 'Sore arm': 12, 'Vomiting': 3, 'Cough': 1}, 'Pfizer': {'Sore arm': 219, 'Cold': 79, 'Headache': 112, 'Fever': 95, 'Chills': 51, 'Vomiting': 33, 'Cough': 5}, 'Moderna': {'Cold': 68, 'Vomiting': 21, 'Fever': 76, 'Chills': 59, 'Sore arm': 119, 'Headache': 134, 'Cough': 1}, 'Johnson&Johnson': {'Cold': 40, 'Headache': 53, 'Chills': 50, 'Sore arm': 35, 'Vomiting': 11, 'Fever': 36}, 'Covishield': {'Fever': 10, 'Chills': 1, 'Headache': 1, 'Body pains': 1}, 'Astrazeneca': {'Fever': 59, 'Chills': 31, 'Headache': 111, 'Cold': 84, 'Vomiting': 16, 'Cough': 7, 'Sore arm': 61, 'Body pains': 16}, 'Janssen': {'Fever': 1, 'Chills': 2, 'Headache': 1}, 'Sputnik': {'Cold': 5, 'Sore arm': 6}}\n"
+            "{'Covaxin': {'Cold': 57, 'Fever': 21, 'Chills': 13, 'Headache': 12, 'Body pains': 7, 'Sore arm': 22, 'Cough': 4, 'Vomiting': 3}, 'Pfizer': {'Cold': 149, 'Headache': 217, 'Fever': 167, 'Chills': 112, 'Sore arm': 361, 'Vomiting': 46, 'Cough': 24, 'Neck pain': 1, 'Body pains': 1}, 'Moderna': {'Sore arm': 196, 'Headache': 187, 'Fever': 132, 'Chills': 100, 'Vomiting': 30, 'Cold': 107, 'Cough': 2}, 'Johnson&Johnson': {'Cold': 88, 'Headache': 97, 'Chills': 71, 'Sore arm': 60, 'Fever': 85, 'Vomiting': 17, 'Cough': 23}, 'Covishield': {'Fever': 25, 'Chills': 1, 'Headache': 1, 'Body pains': 5, 'Cough': 8, 'Vomiting': 1, 'Cold': 1}, 'Astrazeneca': {'Cold': 106, 'Sore arm': 66, 'Cough': 10, 'Headache': 125, 'Fever': 64, 'Vomiting': 14, 'Chills': 35, 'Body pains': 10}, 'Janssen': {'Headache': 5, 'Sore arm': 2, 'Chills': 2, 'Fever': 2}, 'Sputnik': {'Cold': 22, 'Sore arm': 6}}\n"
           ],
           "name": "stdout"
         }
@@ -346,7 +346,7 @@
         "# Creating a data frame\n",
         "df = pd.DataFrame(brandVsReactions, index=['Covaxin', 'Pfizer', 'Moderna','Johnson&Johnson','Covishield','Astrazeneca','Janssen','Sputnik'])"
       ],
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -365,7 +365,7 @@
         "df.fillna(0, inplace=True)\n",
         "df"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -535,7 +535,7 @@
         "    index=[\"Fever\", \"Cold\", \"Bodypains\", \"Chills\", \"Headache\",\"Sore arm\",\"Vomiting\",\"Cough\"]\n",
         ")\n",
         "plotdata.transpose().plot(kind=\"bar\")\n",
-        "plt.figure(figsize=(35, 35))\n",
+        "plt.figure(figsize=(15, 25))\n",
         "plt.title(\"Vaccine vs Reactions Analysis\")\n",
         "plt.xlabel(\"Vaccine Brands\")\n",
         "plt.ylabel(\"Reactions\")"
